Moved live search results to the right so as to be shown on-screen. Also right-aligned search result text for RTL scripts. Fixes #9656
svn path=/plonetheme.sunburst/trunk/; revision=30822

--- a/plonetheme/sunburst/skins/plonetheme_sunburst_styles/RTL.css
+++ b/plonetheme/sunburst/skins/plonetheme_sunburst_styles/RTL.css
@@ -38,6 +38,13 @@
     padding: 0 0 0 2em;
     float: left;
     clear: left;
+    text-align: right;
+}
+
+/* LiveSearch styles */
+
+#LSResult {
+    margin: -1.5em -7em 0 0;
 }
 
 /* Status messages */
